# bluegrass

./: .gitattributes  .gitignore  EddieLessons.html  EddieLessonsOld.html  GenPDF.py  GenSetList.py  GeneratedLinksList.html  GeneratedNotesList.html  GeneratedSongList.html  GeneratedSongsList.html  HTMLheader.txt  KatysLesson.html  KatysLessonOld.html  Links.html  LinksList.html  MLPList.html  PDFLinks.html  PatchTextColor.py  README.md  Set List.chopro  Set List.html  SyncNotes.txt  abouttheband.html  geminilogo.html  homeassistant.html  index-2207081505.html  index.html  index.html@tribe_venue=memorial-methodist-church&page=1&tribe_event_display=list.html  index.html@tribe_venue=memorial-methodist-church&page=1&tribe_event_display=past.html  index_orig_06261635.html  musicsamples.html  myconfig.json  new-baden-jamboree.html  private_links.html  recipes.html  robots.txt  songs.html  songs2.html  ukulele-song-archive.html  web.config  (+5 more)
Christmas/: 01 - Christmas for Cowboys.chopro  01 - Christmas for Cowboys.urltxt  02 - Grandma Got Run Over by a Reindeer.chopro  02 - Grandma Got Run Over by a Reindeer.urltxt  03 - Frosty the Snowman.chopro  04 - Christmas in Texas.chopro  04 - Christmas in Texas.urltxt  05 - Merry Christmas from the Family.chopro  05 - Merry Christmas from the Family.urltxt  05 - Merry Xmas from the Family & Feliz Navidad Medley.chopro  06 - Feliz Navidad.chopro  06 - Feliz Navidad.urltxt  07 - Rockin' Around the Christmas Tree.chopro  (+43 more)
genpdf_package/: pyproject.toml
genpdf_package/src/genpdf_butler/: GenPDF.py  PatchTextColor.py  __main__.py
(+1464 files in other folders)
